Any time a card will be added to or removed from a playerPanel, the panel is now automatically expanded first if collapsed. Fixed an issue where disease cubes would be displayed on top of an overlapping playerPanel -- gave relative positioning to playerPanels to allow their z-index to take effect. Fixed an issue where the number of cards in a player's hand would be updated before the card draw animation happened.

--- a/style.css
+++ b/style.css
@@ -502,6 +502,8 @@ span.r {color: #ef282a}
 	background-color: #353535;
 	margin-left: -1px;
 	overflow: hidden;
+	position: relative;
+	z-index: 6;
 }
 .playerPanel2 { width: 49.1% }
 .playerPanel3 { width: 32.4% }
